# creamy

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  miri.yml
.zed/: tasks.json
bus/cbus/: Cargo.toml
bus/cbus-core/: Cargo.toml  build.rs
bus/cbus-core-macros/: Cargo.toml
bus/cbus-core-macros/src/: define.rs  lib.rs
bus/cbus-core/src/: buffer.rs  dst.rs  lib.rs  message.rs  subscriber.rs  untyped.rs
bus/cbus/src/: bus.rs  config.rs  driver.rs  error.rs  lib.rs  lookup.rs
bus/cbus/src/cpu/: mod.rs  offsets.rs  runner.rs  set.rs
bus/cbus/src/cpu/arch/: mod.rs
bus/cbus/src/cpu/arch/generic/: mod.rs  scalar.rs
bus/cbus/src/cpu/arch/x86/: avx2.rs  avx512.rs  mod.rs  sse41.rs
bus/cbus/src/sys/: buffer_pool.rs  layout.rs  mod.rs  msg_pool.rs
bus/cbus/tests/: cfg_errors.rs  registration.rs  success.rs
bus/cbus/tests/general/: empty_driver.rs  empty_sub.rs  mod.rs
bus/macro-utils/: Cargo.toml
bus/macro-utils/src/: lib.rs  types.rs
bus/message-generator/: Cargo.toml
bus/message-generator/src/: field.rs  lib.rs  templates.rs
bus/message-generator/src/protocol/: mod.rs  primitive.rs  table.rs  types.rs
bus/message-generator/src/protocol/definitions/: chunk.rs  enumeration.rs  field.rs  message.rs  mod.rs  structure.rs  wrapper.rs
bus/message-generator/src/protocol/resolved/: chunk.rs  enumeration.rs  field.rs  message.rs  mod.rs  structure.rs  wrapper.rs
crates/compiler-utils/: Cargo.toml
crates/compiler-utils/src/: bstring.rs  lib.rs  list.rs  strpool.rs
crates/creamy-compiler/: Cargo.toml
crates/creamy-compiler/src/: compiler.rs  lib.rs  resolver.rs  table.rs  utils.rs
crates/creamy-compiler/src/model/: layout.rs  mod.rs
crates/creamy-compiler/src/model/types/: enumeration.rs  message.rs  mod.rs  numeric.rs  protocol.rs  structure.rs
crates/creamy-compiler/src/tree/types/: enumeration.rs  field.rs  message.rs  mod.rs  protocol.rs  structure.rs
crates/creamy-compiler/tests/: success.rs  success.xml
crates/creamy-kit/: Cargo.toml
crates/creamy-kit/src/: intern.rs  lib.rs  manifest.rs  parser.rs  protocol.rs
crates/creamy-kit/src/types/: enumeration.rs  message.rs  mod.rs  numeric.rs  structure.rs
example/plugin/: manifest.toml
example/plugin/declare/: api.xml
