[package]
name = "creamy-kit"
version.workspace = true
edition.workspace = true

[dependencies]
compiler-utils.workspace = true

[dependencies.toml]
version = "1.1.2"
default-features = false
features = ["serde"]

[dependencies.serde]
version = "1.0.228"
default-features = false
features = ["derive"]

[dependencies.zerocopy]
version = "0.8.48"
features = ["derive"]
default-features = false

[dependencies.binrw]
version = "0.15.1"
features = ["default"]
#default-features = false
